@@ -9,3 +9,4 @@ foo,,,,8
 ,"",,,9
 "f",,,,"10"
 "f",,,",bin","11"
+"f",,,"bin,","11"
